# backtest-rust

./: .env.example  .gitignore  .mise.toml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs  router.rs
apps/api/tests/: backtests_api.rs
apps/validate/: Cargo.toml
apps/validate/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: config.rs  error.rs  lib.rs  runtime.rs  telemetry.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs
crates/backtest/tests/: orb_parity.rs  runtime_store.rs
crates/backtest/tests/fixtures/: orb_breakout_cases.json
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/market/: Cargo.toml
crates/market/src/: bars.rs  ingest.rs  lib.rs  profiles.rs
crates/market/tests/: golden_market.rs
crates/market/tests/fixtures/: golden_expected.json  golden_multiday_expected.json  golden_multiday_ticks.json  golden_ticks.json
reference/backtest/: .env.devcontainer.example  .env.example  .env.host.example  .gitignore  .mise.toml  AGENTS.md  Dockerfile  README.md  agent.md  docker-compose.dev.yml  docker-compose.devcontainer.yml  docker-compose.yml  pyproject.toml
reference/backtest/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
reference/backtest/app/: config.py  main.py
reference/backtest/app/api/: routes_backtests.py  routes_chart.py  routes_chart_vwap.py  routes_dash_spa.py  routes_ingest.py  routes_symbols.py
reference/backtest/app/auth/: deps.py  routes.py  security.py
reference/backtest/app/db/: duck.py  models.py  postgres.py  schemas.py
reference/backtest/app/services/: aggregation.py  backtest.py  backtest_analytics.py  ingest.py  large_orders_backfill.py  market_data_store.py  market_processing.py  profile_backfill.py  profile_store.py  queue.py  runtime_cache.py  vwap.py  watcher.py
reference/backtest/app/static/dash/: index.html
reference/backtest/app/strategy/: __init__.py  interfaces.py  orb_breakout_v1.py
reference/backtest/app/worker/: enqueue_non_time_bars_backfill.py  enqueue_profile_backfill.py  run_worker.py  tasks.py
reference/backtest/docs/plan/: clean-slate-backend-replatform.md  eth.md
reference/backtest/experiment/: README.md  volume_profile_memory.py  volume_profile_memory_report.json
reference/backtest/frontend/dash/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
reference/backtest/frontend/dash/src/: App.tsx  styles.css
reference/backtest/or legacy/app/: streamlit_app.py
reference/backtest/or legacy/configs/: strategy.yaml
reference/backtest/or legacy/runs/: latest
reference/backtest/or legacy/runs/run_20260219_213439/: manifest.json  metrics.csv
reference/backtest/or legacy/runs/run_20260219_213537/: manifest.json
reference/backtest/or legacy/runs/run_20260220_055558/: manifest.json  trades.csv
reference/backtest/or legacy/runs/run_20260220_062519/: config_used.json  manifest.json
reference/backtest/or legacy/runs/run_20260220_063248/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071254/: manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071342/: manifest.json  trades.csv
reference/backtest/or legacy/runs/run_20260220_071400/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071419/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071448/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071527/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071600/: manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071618/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071640/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260220_071905/: manifest.json  trades.csv
reference/backtest/or legacy/runs/run_20260220_071912/: config_used.json  manifest.json
reference/backtest/or legacy/runs/run_20260221_031257/: manifest.json
reference/backtest/or legacy/runs/run_20260221_032231/: manifest.json
reference/backtest/or legacy/runs/run_20260221_032252/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260221_032420/: manifest.json
reference/backtest/or legacy/runs/run_20260221_032429/: manifest.json  metrics.csv
reference/backtest/or legacy/runs/run_20260221_032435/: manifest.json
reference/backtest/or legacy/runs/run_20260221_032442/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260221_034152/: config_used.json  manifest.json  metrics.csv
reference/backtest/or legacy/runs/run_20260221_034541/: config_used.json  manifest.json  metrics.csv  trades.csv
reference/backtest/or legacy/runs/run_20260221_055703/: manifest.json
reference/backtest/or legacy/tests/: test_backtest.py  test_e2e.py  test_ingest.py  test_metrics_summary.py  test_resample.py  test_signals.py  test_ui_smoke.py
reference/backtest/scripts/: backup.sh  backup_cron.example  build-dash-frontend.sh  devcontainer-infra.sh  devcontainer-run.sh  import_ohlc_1m.py  local-run.sh  local-stop.sh
reference/backtest/tests/: conftest.py
reference/backtest/tests/unit/: test_aggregation_duckdb.py  test_backtest_analytics.py  test_backtest_routes.py  test_backtest_service.py  test_chart_routes.py  test_chart_vwap_routes.py  test_dash_spa.py  test_ingest.py  test_ingest_routes.py  test_large_orders_backfill.py  test_market_processing.py  test_profile_backfill.py  test_profile_store.py  test_strategy_orb_breakout_v1.py  test_symbols_routes.py  test_vwap_service.py  test_worker_non_time_bars_backfill.py  test_worker_profile_backfill.py
(+145 files in other folders)
