[workspace]
members = [
    "apps/api",
    "apps/worker",
    "crates/app-core",
    "crates/market",
    "crates/jobs",
    "crates/backtest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0.97"
app-core = { path = "crates/app-core" }
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros", "json"] }
backtest = { path = "crates/backtest" }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.4"
clickhouse = { version = "0.13.2", features = ["chrono", "uuid"] }
csv = "1.4.0"
jobs = { path = "crates/jobs" }
market = { path = "crates/market" }
parquet = { version = "56.2.0", features = ["arrow"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.3", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
