[package]
name = "runtime-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
axum.workspace = true
backtest.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
jobs.workspace = true
market.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
backtest.workspace = true
jobs.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower = { version = "0.5.2", features = ["util"] }
