[package]
name = "runtime-validate"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
backtest.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
market.workspace = true
serde.workspace = true
serde_json.workspace = true
