[package]
name = "market"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clickhouse.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true
